ramlogic is here!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ fieldset {
 /*START SCROLL TO UP DESIGN*/
 
 .scrollup {
-	background: #EB761B none repeat scroll 0 0;
+	background: #006DD9 none repeat scroll 0 0;
 	border-radius: 50%;
 	bottom: 30px;
 	color: #fff;
@@ -118,7 +118,7 @@ fieldset {
 	z-index: 9;
 }
 .scrollup:hover {
-	background: #EB761B;
+	background: #006DD9;
 	-webkit-transition: .5s;
 	transition: .5s;
 }
@@ -133,7 +133,7 @@ fieldset {
 	font-weight: 600;
 }
 .section-title span {
-	background: #EB761B none repeat scroll 0 0;
+	background: #006DD9 none repeat scroll 0 0;
 	display: block;
 	height: 2px;
 	margin: 15px auto;
@@ -172,7 +172,7 @@ fieldset {
 	color: #fff;
 }
 .logo {
-	padding-top: 29px;
+	padding-top: 20px;
 }
 .mainmenu .navbar-nav li a {
 	color: #fff;
@@ -185,18 +185,18 @@ fieldset {
 }
 .mainmenu .navbar-nav li a:hover {
 	background: none;
-	color: #EB761B;
+	color: #006DD9;
 	-webkit-transition: .3s;
 	transition: .3s;
 }
 .nav li a:hover,
 .nav li a:focus {
 	background: none;
-	color: #EB761B;
+	color: #006DD9;
 }
 .menu-bg .navbar-nav li a:hover,
 .menu-bg .navbar-nav li.active a {
-	color: #EB761B;
+	color: #006DD9;
 	-webkit-transition: .3s;
 	transition: .3s;
 }
@@ -216,15 +216,19 @@ fieldset {
 	transition: .3s;
 }
 .menu-bg .logo {
-	padding-top: 18px;
+	padding-top: 17px;
 	-webkit-transition: .3s;
 	transition: .3s;
 }
 .menu-bg .logo a {
-	color: #EB761B;
+	color: #006DD9;
+}
+.menu-bg .logo a img {
+	width: 100px;
+	transition: .3s;
 }
 .menu-bg .mainmenu .navbar-nav li a:hover {
-	color: #EB761B;
+	color: #006DD9;
 }
 /*02. END MENU DESIGN AREA*/
 /*03.START HOME DESIGN AREA*/
@@ -250,7 +254,7 @@ fieldset {
 	width: 100%;
 }
 a.slide-btn {
-	background: #EB761B;
+	background: #006DD9;
 	color: #fff;
 	display: inline-block;
 	font-weight: 400;
@@ -264,7 +268,7 @@ a.slide-btn {
 	border-radius: 4px;
 }
 a.slide-btn:hover {
-	background: #EB761B;
+	background: #006DD9;
 	color: #fff;
 	border: none;
 }
@@ -308,7 +312,7 @@ a.slide-btn:hover {
 }
 a.welcome-control:hover i,
 a.welcome-control:focus {
-	color: #EB761B;
+	color: #006DD9;
 }
 .single-slide-item p {
 	color: #fff;
@@ -402,7 +406,7 @@ a.welcome-control:focus {
 	width: 80px;
 }
 .single-featured:hover i {
-	background: #EB761B;
+	background: #006DD9;
 	color: #fff;
 	-webkit-transition: .5s;
 	transition: .5s;
@@ -413,13 +417,13 @@ a.welcome-control:focus {
 	margin-top: 50px;
 }
 .about-text span {
-	color: #EB761B;
+	color: #006DD9;
 }
 .about-text > p {
 	margin-bottom: 20px;
 }
 a.about-btn {
-	background: #EB761B;
+	background: #006DD9;
 	color: #fff;
 	display: inline-block;
 	font-size: 12px;
@@ -430,7 +434,7 @@ a.about-btn {
 	text-transform: uppercase;
 }
 a.about-btn:hover {
-	background: #EB761B;
+	background: #006DD9;
 	color: #fff;
 	transition: .5s;
 	-webkit-transition: .5s;
@@ -453,7 +457,7 @@ a.about-btn:hover {
 	width: 100%;
 }
 .progress-bar > span {
-	background: #EB761B;
+	background: #006DD9;
 	display: block;
 	height: 100%;
 }
@@ -490,14 +494,14 @@ a.about-btn:hover {
 	transition: .4s;
 }
 .single-service-box:hover {
-	background: #EB761B;
+	background: #006DD9;
 	color: #fff;
 	-webkit-transition: .4s;
 	transition: .4s;
 }
 .single-service-box:hover .service-icon i {
 	background: #fff;
-	color: #EB761B;
+	color: #006DD9;
 	-webkit-transition: .4s;
 	transition: .4s;
 }
@@ -524,7 +528,7 @@ a.about-btn:hover {
 	margin-top: 25px;
 }
 a.get-start-btn {
-	background: #EB761B none repeat scroll 0 0;
+	background: #006DD9 none repeat scroll 0 0;
 	border-radius: 4px;
 	color: #fff;
 	display: inline-block;
@@ -535,7 +539,7 @@ a.get-start-btn {
 	text-transform: uppercase;
 }
 a.get-start-btn:hover {
-	background: #EB761B;
+	background: #006DD9;
 	-webkit-transition: .5s;
 	transition: .5s;
 }
@@ -581,11 +585,11 @@ ul.team-social i {
 	margin: 0 10px;
 }
 .single-team h4 {
-	color: #EB761B;
+	color: #006DD9;
 	margin-top: 20px;
 }
 ul.team-social i:hover {
-	color: #EB761B;
+	color: #006DD9;
 }
 /*07. END TEAM AREA*/
 /*08.START FUN FACT DESIGN AREA*/
@@ -620,7 +624,7 @@ ul.team-social i:hover {
 	margin: 20px 0;
 }
 .single-project-complete i {
-	color: #EB761B;
+	color: #006DD9;
 	font-size: 45px;
 }
 /*08.START FUN FACT DESIGN AREA*/
@@ -639,7 +643,7 @@ ul.work li {
 	text-align: center;
 	text-transform: uppercase;
 	cursor: pointer;
-	border: 1px solid #EB761B;
+	border: 1px solid #006DD9;
 	margin: 0 2px;
 }
 .single-work {
@@ -648,7 +652,7 @@ ul.work li {
 }
 ul.work li.active,
 ul.work li:hover {
-	background: #EB761B;
+	background: #006DD9;
 	color: #fff;
 	border: 1px solid #fff;
 	transition: .5s;
@@ -739,7 +743,7 @@ ul.work li:hover {
 	margin-bottom: 20px;
 }
 .testimonial-author img {
-	border: 3px solid #EB761B;
+	border: 3px solid #006DD9;
 	border-radius: 50%;
 	height: auto;
 	width: 100px;
@@ -753,7 +757,7 @@ ul.work li:hover {
 	margin-top: 15px;
 }
 .single-testimonial h6 {
-	color: #EB761B;
+	color: #006DD9;
 	font-style: italic;
 	font-weight: 700;
 }
@@ -788,7 +792,7 @@ ul.work li:hover {
 }
 .owl-carousel .owl-page.active span,
 .owl-controls.clickable .owl-page:hover span {
-	background: #EB761B;
+	background: #006DD9;
 	filter: Alpha(Opacity=100);
 	/*IE7 fix*/
 	
@@ -860,13 +864,13 @@ ul.work li:hover {
 }
 .single-price-box:hover .package-title,
 .single-price-box:hover .package-detail {
-	background: #EB761B;
+	background: #006DD9;
 	color: #fff;
 	-webkit-transition: .5s;
 	transition: .5s;
 }
 .single-price-box:hover .package-value {
-	background: #EB761B;
+	background: #006DD9;
 	color: #fff;
 	-webkit-transition: .5s;
 	transition: .5s;
@@ -893,7 +897,7 @@ ul.post-meta li {
 	margin-right: 10px;
 }
 .post-meta i {
-	color: #EB761B;
+	color: #006DD9;
 	margin-right: 5px;
 }
 .single-blog-post {
@@ -909,10 +913,10 @@ ul.post-meta li {
 	margin-top: 15px;
 }
 .single-post-content h4:hover a {
-	color: #EB761B;
+	color: #006DD9;
 }
 a.blog-btn {
-	background: #EB761B none repeat scroll 0 0;
+	background: #006DD9 none repeat scroll 0 0;
 	color: #fff;
 	display: inline-block;
 	font-size: 12px;
@@ -1024,7 +1028,7 @@ a.blog-btn {
 	color: #fff;
 }
 .footer-widget span {
-	color: #EB761B;
+	color: #006DD9;
 }
 .single-post h4 a {
 	color: #666;
@@ -1063,7 +1067,7 @@ ul.contact-list i {
 	text-transform: uppercase;
 }
 .footer-menu li a:hover {
-	color: #EB761B;
+	color: #006DD9;
 }
 .footer-menu i {
 	margin-right: 3px;
@@ -1084,7 +1088,7 @@ ul.contact-list i {
 	color: #fff;
 }
 .single-latest-post h2:hover {
-	color: #EB761B;
+	color: #006DD9;
 	transition: .5s;
 }
 .single-latest-post span {
@@ -1122,7 +1126,7 @@ ul.contact-list i {
 	width: 35px;
 }
 .footer-social a:hover {
-	background: #EB761B;
+	background: #006DD9;
 	color: #fff;
 	transition: .5s;
 }
@@ -1159,6 +1163,6 @@ ul.contact-list i {
 	color: #ddd;
 }
 .text-muted span {
-	color: #EB761B;
+	color: #006DD9;
 }
 /*15.END FOOTER DESIGN AREA*/
